# playlist-to-mp3

./: .gitignore  Playlist to MP3.spec  README.md  install.ps1  install.sh  pyproject.toml
docs/: PROJECT.md
playlist_to_mp3/: __init__.py  app.py  ffmpeg_setup.py
